# toy-shakyo

./: .env.example  .gitignore  CMakeLists.txt  Makefile  README.md  test.ir  vcpkg.json
.github/workflows/: build_test.yml  fmt.yml
include/lib/: hello.h
include/toy/: AST.h  CMakeLists.txt  dialect.h  lexer.h  mlirGen.h  ops.td  parser.h  passes.h  replaceIndexToI64.h  shapeInferenceInterface.h  shapeInferenceInterface.td
samples/: sample.toy  sample2.toy  sample3.toy  simple.toy
src/: CMakeLists.txt  main.cpp  toyc.cpp
src/lib/: CMakeLists.txt  hello.cpp
src/mlir/: CMakeLists.txt  dialect.cpp  gpuEraseIndexArgPass.cpp  gpuMemoryAllocationPass.cpp  lowerToAffineLoops.cpp  lowerToLLVM.cpp  mlirGen.cpp  putOutArithConstantPass.cpp  replaceIndexToI64.cpp  shapeInferencePass.cpp  toyCombine.cpp  toyCombine.td
src/parser/: AST.cpp  CMakeLists.txt
test/: CMakeLists.txt  ast_snap_test.cpp  interface_test.cpp  lexer_test.cpp  lib_test.cpp  lowering_test.cpp  parser_test.cpp  rewrite_test.cpp  test_util.cpp  test_util.h
